--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,18 +3,38 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!!{% endblock %}</title>
-        <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}">
+
+        <!-- Le styles -->
+        {% stylesheets '@bootstrap_css_responsive' %}
+        <link href="{{ asset_url }}" rel="stylesheet">
+        {% endstylesheets %}
+        <style>
+            body {
+                padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+            }
+        </style>
+        {% stylesheets '@bootstrap_css_responsive' %}
+        <link href="{{ asset_url }}" rel="stylesheet">
+        {% endstylesheets %}
+
+        <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+        <!--[if lt IE 9]>
+        {% javascripts '@bootstrap_html5shiv' %}
+        <script src="{{ asset_url }}"></script>
+        {% endjavascripts %}
+        <![endif]-->
+
         {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="{{ asset('js/jquery.js') }}"><\/script>')</script>
-
         <!-- Bootstrap -->
     </head>
-    <body>
+    <body id="main_container">
+
         {% block body %}{% endblock %}
+
+        {% javascripts '@bootstrap_js' %}
+        <script src="{{ asset_url }}"></script>
+        {% endjavascripts %}
+
         {% block javascripts %}{% endblock %}
-        <script src="{{ asset('js/bootstrap.js') }}"></script>
     </body>
 </html>
