--- a/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
+++ b/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
@@ -1,4 +1,8 @@
 {% extends "::base.html.twig" %}
 
+{% block javascripts_header %}
+    <script type="text/javascript" data-main="frontend/main.js" src="frontend/bower_components/requirejs/require.js"></script>
+{% endblock %}
+
 {% block body %}
 {% endblock %}
