Marionette regions adapted

--- a/web/frontend/application/layouts/main.tpl.html
+++ b/web/frontend/application/layouts/main.tpl.html
@@ -1,5 +1,11 @@
 <nav id="primary" class="main-nav"></nav>
-<nav id="secondary" class="main-nav"></nav>
+<nav id="secondary" class="main-nav">
+
+    <div class="profile-menu"></div>
+
+    <ul class="secondary-nav-menu"></ul>
+
+</nav>
 <section id="main">
     <div class="top-nav"> here go the breadcrumbs and search, in fluid containers </div>
     <div class="container-fluid a-main-container"> here goes the main content </div>
