--- a/web/frontend/application/layouts/main.tpl.html
+++ b/web/frontend/application/layouts/main.tpl.html
@@ -7,7 +7,27 @@
 
 </nav>
 <section id="main">
-    <div class="top-nav"> here go the breadcrumbs and search, in fluid containers </div>
-    <div class="container-fluid a-main-container"> here goes the main content </div>
+    <div class="top-nav">
+
+        <div class="container-fluid">
+            <div class="row-fluid search-button-bar-container">
+                <div class="span12">
+                    <ul class="breadcrumb">
+                    </ul>
+                    <a class="search-button-trigger" href="#"><i class="icon-search"></i></a>
+                </div>
+            </div>
+
+            <div class="row-fluid search-bar-nav">
+                <div class="span12">
+                    <form>
+                        <input type="text" class="search" placeholder="Search...">
+                    </form>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="container-fluid a-main-container"> here goes the main content</div>
 </section>
   
