--- a/app/Resources/views/plastique.html.twig
+++ b/app/Resources/views/plastique.html.twig
@@ -23,6 +23,12 @@
     {% block stylesheets %}{% endblock %}
     <!-- Bootstrap -->
     {% block javascripts_header %}{% endblock %}
+
+    <style type="text/css">
+        nav#primary {
+            width: 130px;
+        }
+    </style>
 </head>
 <body id="main_container">
 
