--- a/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
+++ b/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
@@ -6,6 +6,9 @@
             config: {
                 "application/main": {
                     container: "body"
+                },
+                "modules/occupation/collection": {
+                    url: "{{ path("api_v1_get_occupations") }}"
                 }
             }
         };
