--- a/web/frontend/helpers/views/collection.list/list.tpl.html
+++ b/web/frontend/helpers/views/collection.list/list.tpl.html
@@ -23,7 +23,7 @@
     <tfoot>
         <tr>
             <td colspan="2">
-                <a href="<%=model.getLink('new')%>" class="j-nav j-new-occupation button blue"><i class="icon-plus"></i> Добавить</a>
+                <a href="<%=model.linkTo('new')%>" class="j-nav j-new-occupation button blue"><i class="icon-plus"></i> Добавить</a>
             </td>
         </tr>
     </tfoot>
