--- a/web/frontend/helpers/views/model.edit/edit.tpl.html
+++ b/web/frontend/helpers/views/model.edit/edit.tpl.html
@@ -9,14 +9,15 @@
             <%if(view.options.exclude && _(view.options.exclude).contains(key)) return;%>
             <tr>
                 <th><%if(view.options.translations && view.options.translations[key]){%><%=view.options.translations[key]%><%}else{%><%=key%><%}%></th>
-                <td><%=attr%></td>
+                <td><input type="text" name="<%=key%>" class="j-data" data-data-attr="<%=key%>" value="<%=attr%>"/></td>
             </tr>
             <%});%>
     </tbody>
     <tfoot>
     <tr>
         <td colspan="2">
-            <a class="button blue j-nav" href="<%=model.linkTo('edit')%>"><i class="icon-pencil"></i> Редактировать</a>
+            <a class="button j-cancel j-nav" href="<%=model.linkTo('show')%>"><i class="icon-remove"></i> Отменить</a>
+            <button class="button j-save green"><i class="icon-ok"></i> Сохранить</button>
         </td>
     </tr>
     </tfoot>
