--- a/web/frontend/helpers/views/collection.list/list.tpl.html
+++ b/web/frontend/helpers/views/collection.list/list.tpl.html
@@ -15,7 +15,7 @@
             <td>
                 <a class="j-nav button" href="<%=elem.linkTo('show')%>"><i class="icon-eye-open"></i></a>
                 <a class="j-nav button blue" href="<%=elem.linkTo('edit')%>"><i class="icon-pencil"></i></a>
-                <button class="j-remove-occupation button red" data-id="<%-elem.id%>"><i class="icon-trash"></i></button>
+                <button class="j-remove-occupation button red" data-id="<%=elem.id%>"><i class="icon-trash"></i></button>
             </td>
         </tr>
         <%});%>
