Raw projects added

--- a/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
+++ b/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
@@ -9,6 +9,9 @@
                 },
                 "modules/occupation/collection": {
                     url: "{{ path("api_v1_get_occupations") }}"
+                },
+                "modules/project/collection": {
+                    url: "{{ path("api_v1_get_projects") }}"
                 }
             }
         };
