--- a/src/Budget/BudgetBundle/Resources/views/Project/new.html.twig
+++ b/src/Budget/BudgetBundle/Resources/views/Project/new.html.twig
@@ -3,12 +3,7 @@
 {% block body -%}
     <h1>Project creation</h1>
 
-    <form action="{{ path('crud_project_create') }}" method="post" {{ form_enctype(form) }}>
-        {{ form_widget(form) }}
-        <p>
-            <button type="submit">Create</button>
-        </p>
-    </form>
+    {{ form(form) }}
 
         <ul class="record_actions">
     <li>
