--- a/src/Budget/BudgetBundle/Resources/views/Project/edit.html.twig
+++ b/src/Budget/BudgetBundle/Resources/views/Project/edit.html.twig
@@ -3,13 +3,7 @@
 {% block body -%}
     <h1>Project edit</h1>
 
-    <form action="{{ path('crud_project_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
-        <input type="hidden" name="_method" value="PUT" />
-        {{ form_widget(edit_form) }}
-        <p>
-            <button type="submit">Edit</button>
-        </p>
-    </form>
+    {{ form(edit_form) }}
 
         <ul class="record_actions">
     <li>
@@ -17,12 +11,6 @@
             Back to the list
         </a>
     </li>
-    <li>
-        <form action="{{ path('crud_project_delete', { 'id': entity.id }) }}" method="post">
-            <input type="hidden" name="_method" value="DELETE" />
-            {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
-        </form>
-    </li>
+    <li>{{ form(delete_form) }}</li>
 </ul>
 {% endblock %}
