--- a/src/Budget/BudgetBundle/Resources/views/Project/show.html.twig
+++ b/src/Budget/BudgetBundle/Resources/views/Project/show.html.twig
@@ -35,12 +35,6 @@
             Edit
         </a>
     </li>
-    <li>
-        <form action="{{ path('crud_project_delete', { 'id': entity.id }) }}" method="post">
-            <input type="hidden" name="_method" value="DELETE" />
-            {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
-        </form>
-    </li>
+    <li>{{ form(delete_form) }}</li>
 </ul>
 {% endblock %}
