--- a/web/frontend/helpers/views/collection.list/list.tpl.html
+++ b/web/frontend/helpers/views/collection.list/list.tpl.html
@@ -1,6 +1,8 @@
 <%var countFields = 1;%>
+<%var fields = [];%>
 <%_(model.createEntity().attributes).each(function(attr, key){%>
     <%if(view.options.exclude && _(view.options.exclude).contains(key)) return;
+    fields.push(key);
     countFields++;%>
 <%});%>
 <table class="table table-striped table-bordered box">
@@ -19,9 +21,19 @@
         </tr>
         <%model.each(function(elem){%>
         <tr>
-            <%_(elem.attributes).each(function(attr, key){%>
-                <%if(view.options.exclude && _(view.options.exclude).contains(key)) return;%>
-                <td><%=attr%></td>
+            <%_(fields).each(function(key){%>
+                <%var attr = elem.get(key);%>
+                <td>
+                    <%if(view.options.fields && view.options.fields[key]){%>
+                        <%switch(view.options.fields[key].type){
+                            case "enum":%>
+                                <%=view.options.fields[key].values[attr]%>
+                            <%break;
+                        }%>
+                    <%}else{%>
+                        <%=attr%>
+                    <%}%>
+                </td>
             <%});%>
             <td>
                 <a class="j-nav button" href="<%=elem.linkTo('show')%>"><i class="icon-eye-open"></i></a>
