--- a/web/frontend/helpers/views/model.show/show.tpl.html
+++ b/web/frontend/helpers/views/model.show/show.tpl.html
@@ -1,3 +1,8 @@
+<%var fields = [];%>
+<%_(model.defaults).each(function(attr, key){%>
+    <%if(view.options.exclude && _(view.options.exclude).contains(key)) return;
+    fields.push(key);
+});%>
 <table class="table table-striped table-bordered box">
     <thead>
         <tr>
@@ -5,11 +10,22 @@
         </tr>
     </thead>
     <tbody>
-        <%_(model.attributes).each(function(attr, key){%>
+        <%_(fields).each(function(key){%>
             <%if(view.options.exclude && _(view.options.exclude).contains(key)) return;%>
+            <%var attr = model.get(key);%>
             <tr>
                 <th><%if(view.options.translations && view.options.translations[key]){%><%=view.options.translations[key]%><%}else{%><%=key%><%}%></th>
-                <td><%=attr%></td>
+                <td>
+                    <%if(view.options.fields && view.options.fields[key]){%>
+                        <%switch(view.options.fields[key].type){
+                            case "enum":%>
+                            <%=view.options.fields[key].values[attr]%>
+                            <%break;
+                         }%>
+                    <%}else{%>
+                        <%=attr%>
+                    <%}%>
+                </td>
             </tr>
         <%});%>
     </tbody>
