--- a/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
+++ b/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
@@ -12,6 +12,9 @@
                 },
                 "modules/project/collection": {
                     url: "{{ path("api_v1_get_projects") }}"
+                },
+                "modules/employee/collection": {
+                    url: "{{ path("api_v1_get_employees") }}"
                 }
             }
         };
