--- a/web/frontend/helpers/views/model.show/show.tpl.html
+++ b/web/frontend/helpers/views/model.show/show.tpl.html
@@ -21,6 +21,9 @@
                             case "enum":%>
                             <%=view.options.fields[key].values[attr]%>
                             <%break;
+                            default:%>
+                            <%=attr%>
+                            <%break;
                          }%>
                     <%}else{%>
                         <%=attr%>
