--- a/web/frontend/helpers/views/model.show/show.tpl.html
+++ b/web/frontend/helpers/views/model.show/show.tpl.html
@@ -17,6 +17,9 @@
                 <th><%if(view.options.translations && view.options.translations[key]){%><%=view.options.translations[key]%><%}else{%><%=key%><%}%></th>
                 <td>
                     <%if(view.options.fields && view.options.fields[key]){%>
+                        <%if(view.options.fields[key].getter){
+                        attr = model[view.options.fields[key].getter]();
+                        };%>
                         <%switch(view.options.fields[key].type){
                             case "enum":%>
                             <%=view.options.fields[key].values[attr]%>
