--- a/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
+++ b/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
@@ -22,6 +22,9 @@
 
     <script type="text/javascript" data-main="frontend/main.js"
             src="frontend/bower_components/requirejs/require.js"></script>
+
+    <link rel="stylesheet" href="frontend/bower_components/select2/select2.css"/>
+
 {% endblock %}
 
 {% block body %}
