--- a/web/frontend/helpers/views/model.new/new.tpl.html
+++ b/web/frontend/helpers/views/model.new/new.tpl.html
@@ -22,8 +22,23 @@
                         <%});%>
                     </select>
                     <%break;
+                    case "entity_multi":
+                    if(view.options.fields[key].getter){
+                    attr = model[view.options.fields[key].getter]();
+                    };
+                    var collection = app.collection(view.options.fields[key].entityType);
+                    %>
+                    <select multiple="multiple" style="width:100%" name="<%=key%>" data-data-attr="<%=key%>" class="j-data">
+                        <%collection.each(function(entity){%>
+                        <option value="<%=entity.id%>" <%if( attr.indexOf(entity) != -1){%>selected="selected"<%};%>><%=entity%></option>
+                        <%});%>
+                    </select>
+                    <%break;
                     case "text":%>
                     <textarea name="<%=key%>" class="j-data" data-data-attr="<%=key%>" rows="3" cols="60"><%=attr%></textarea>
+                    <%break;
+                    default:%>
+                    <input type="text" name="<%=key%>" class="j-data" data-data-attr="<%=key%>" value="<%=attr%>"/>
                     <%break;
                 }%>
             <%}else{%>
