--- a/app/Resources/views/plastique.html.twig
+++ b/app/Resources/views/plastique.html.twig
@@ -14,6 +14,8 @@
     <link href="/frontend/plastique/stylesheets/iefix.css" media="screen" rel="stylesheet" type="text/css"/>
     <![endif]-->
 
+    <link href="/css/styles_main.css" media="screen" rel="stylesheet" type="text/css"/>
+
     <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
