--- a/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
+++ b/src/Budget/ApplicationBundle/Resources/views/Default/index.html.twig
@@ -13,6 +13,9 @@
                 "modules/project/collection": {
                     url: "{{ path("api_v1_get_projects") }}"
                 },
+                "modules/project-involvement/collection": {
+                    url: "{{ path("api_v1_get_involvements") }}"
+                },
                 "modules/employee/collection": {
                     url: "{{ path("api_v1_get_employees") }}"
                 }
