--- a/web/frontend/helpers/views/model.edit/edit.tpl.html
+++ b/web/frontend/helpers/views/model.edit/edit.tpl.html
@@ -51,6 +51,18 @@ fields.push(key);
                                 <%});%>
                             </select>
                             <%break;
+                            case "entity":
+                            if(view.options.fields[key].getter){
+                            attr = model[view.options.fields[key].getter]();
+                            };
+                            var collection = app.collection(view.options.fields[key].entityType);
+                            %>
+                            <select style="width:100%" name="<%=key%>" data-data-attr="<%=key%>" class="j-data">
+                                <%collection.each(function(entity){%>
+                                <option value="<%=entity.id%>" <%if( attr == entity ){%>selected="selected"<%};%>><%=entity%></option>
+                                <%});%>
+                            </select>
+                            <%break;
                             case "text":%>
                                 <textarea name="<%=key%>" class="j-data" data-data-attr="<%=key%>" rows="3" cols="60"><%=attr%></textarea>
                             <%break;
