--- a/web/frontend/modules/involvement/views/byEmployee.tpl.html
+++ b/web/frontend/modules/involvement/views/byEmployee.tpl.html
@@ -26,7 +26,7 @@ var occupations = app.collection('occupations');
                 <td>
                     <%if(involvements.length != 0){%>
                         <table>
-                            <%_(involvements).each(function(involvement){%>
+                            <%involvements.each(function(involvement){%>
                             <tr>
                                 <td><%=involvement.project()%> | <%=involvement.get('involvement')%>%</td>
                             </tr>
